--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ fe_openti
 pysftp==0.2.8
 suds-jurko
 urllib3==1.19.1
-# facturacion_electronica>=0.5.4
 facturacion_electronica==0.11.5
 num2words
 xlsxwriter
@@ -15,3 +14,4 @@ requests>=2.21.0
 PyMuPDF==1.16.6
 payflow
 pykhipu
+# Crear un Diario de Banco para Webpay
